<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="edit_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <!-- <string name="hello_world">Hello world!</string> -->

    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>

</resources>
