<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"/>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button android:id="@+id/date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/date" />
        
        <Button android:id="@+id/time"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:text="@string/time" />

    </LinearLayout>
   
   <EditText android:id="@+id/notes"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:hint="@string/notes" />
   
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="sendMessage"
        android:text="@string/button_send" />
    
<!--      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
-->

</LinearLayout>
